Sync fixes from upstream claude-code-free
- Fix orphan </think> tags (Step Fun AI compatibility)
- Fix logging race condition on hot reload
- Add suggestion mode skip optimization
- Add filepath extraction mock optimization
- Increase default rate limit from 20 to 40

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ FAST_PREFIX_DETECTION=true
 LOG_FULL_PAYLOADS=true
 ENABLE_NETWORK_PROBE_MOCK=true
 ENABLE_TITLE_GENERATION_SKIP=true
+ENABLE_SUGGESTION_MODE_SKIP=true
+ENABLE_FILEPATH_EXTRACTION_MOCK=true
 
 
 # Telegram Config
@@ -25,7 +27,7 @@ MESSAGING_RATE_WINDOW=1
 # Provider Config
 PROVIDER_API_KEY=""
 PROVIDER_BASE_URL="https://api.openai.com/v1"
-PROVIDER_RATE_LIMIT=20
+PROVIDER_RATE_LIMIT=40
 PROVIDER_RATE_WINDOW=60
 
 PROVIDER_TEMPERATURE=1.0
